Played with Mongoose virtual properties and changed city deletion logic
