# main.js
@@ -69,9 +69,10 @@ router.route('/cities')
     .get(apiRouter.City.getCities);
 
 router.route('/payments')
-    .post(apiRouter.Payment.postPayment);
+    .post(apiRouter.Payment.postPayment)
+    .delete(apiRouter.Payment.deletePayment);
 
-router.route('/cities/:townCode')
+router.route('/cities/:townName')
     .delete(apiRouter.City.deleteCity);
 
 //Create server
