# swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "title": "Household API",
     "description": "API description in Markdown.",
-    "version": "1.3.0"
+    "version": "1.4.0"
   },
   "basePath": "/api/v1",
   "tags": [
@@ -21,7 +21,7 @@
     }
   ],
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/authenticate": {
@@ -98,7 +98,7 @@
         }
       }
     },
-    "/cities/{townCode}": {
+    "/cities/{townName}": {
       "delete": {
         "tags":[
           "Cities"
@@ -108,15 +108,15 @@
             "Bearer": []
           }
         ],
-        "summary": "Delete city using city code",
+        "summary": "Delete city using town name",
         "parameters": [
           {
             "in": "path",
-            "name": "townCode",
+            "name": "townName",
             "schema": {
               "type": "string"
             },
-            "description": "Delete City by town code"
+            "description": "Delete City by town name"
           }
         ],
         "produces": [
@@ -186,17 +186,17 @@
     },
     "City":{
       "required":[
-        "townCode",
-        "townName"
+        "townName",
+        "currentPopulation"
       ],
       "properties": {
-        "townCode":{
-          "type": "string"
-        },
         "townName":{
           "type": "string"
         },
         "currentPopulation":{
+          "type": "string"
+        },
+        "townCode":{
           "type": "string"
         }
       }
